cluster/manifests/memory-bank/overlays/dev/cloudevents-relay/peer_authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: cloudevents-relay
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: cloudevents-relay
  mtls:
    mode: STRICT
  portLevelMtls:
    # Knative activator probes this port over plain HTTP via PassthroughCluster.
    "8012":
      mode: PERMISSIVE
