cluster/manifests/memory-bank/overlays/dev/cloudevents-relay/sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: cloudevents-relay
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/component: cloudevents-relay
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - ./memory-bank.memory-bank.svc.cluster.local
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
